force-app/main/default/objects/Subcategory__c/Subcategory__c.object-meta.xml
<CustomObject>
    <label>Subcategory</label>
    <nameField>
        <label>Subcategory</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Subcategories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>