force-app/main/default/objects/Subcategory__c/fields/Display_Name_Arabic__c.field-meta.xml
<CustomField>
    <fullName>Display_Name_Arabic__c</fullName>
    <label>Display Name (Arabic)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>