force-app/main/default/objects/Subcategory__c/fields/Parent__c.field-meta.xml
<CustomField>
    <fullName>Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Category</label>
    <referenceTo>Category__c</referenceTo>
    <relationshipLabel>Subcategories</relationshipLabel>
    <relationshipName>Subcategories</relationshipName>
    <type>Lookup</type>
</CustomField>