force-app/main/default/objects/Subcategory__c/fields/Rendering_Template__c.field-meta.xml
<CustomField>
    <fullName>Rendering_Template__c</fullName>
    <label>Rendering Template</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>