force-app/main/default/objects/Subcategory__c/fields/Show_in_Menu__c.field-meta.xml
<CustomField>
    <fullName>Show_in_Menu__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show in Menu</label>
    <type>Checkbox</type>
</CustomField>