force-app/main/default/objects/Subcategory__c/fields/Subcategory_Id__c.field-meta.xml
<CustomField>
    <fullName>Subcategory_Id__c</fullName>
    <displayFormat>SC{0000}</displayFormat>
    <label>Subcategory Id</label>
    <type>AutoNumber</type>
</CustomField>